Fix cropped hero image for big monitors (1920 width and up)

--- a/app/assets/stylesheets/catarse_bootstrap/_extra.sass
+++ b/app/assets/stylesheets/catarse_bootstrap/_extra.sass
@@ -217,6 +217,9 @@ select.date
   @media (min-width: 991px)
     height: 600px
 
+  @media (min-width: 1920px)
+    height: 900px
+
   @media (max-width: 414px) and (orientation: portrait)
     background-color: #fff
     height: auto
